[gd_scene load_steps=6 format=3 uid="uid://d1h7yhqilduwh"]

[ext_resource type="Script" path="res://src/ui/game_root.gd" id="1_bmher"]
[ext_resource type="Script" path="res://src/ui/game.gd" id="1_u45wv"]
[ext_resource type="Script" path="res://src/event/input_handler.gd" id="3_8jyjy"]
[ext_resource type="Script" path="res://src/map/map.gd" id="3_j41s7"]
[ext_resource type="Texture2D" uid="uid://6kak7piyov44" path="res://assets/img/rebeccagood/background_grass.jpg" id="5_pfiwo"]

[node name="GameRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bmher")

[node name="Game" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_u45wv")

[node name="InputHandler" type="Node" parent="Game"]
script = ExtResource("3_8jyjy")

[node name="Map" type="Node2D" parent="Game"]
script = ExtResource("3_j41s7")

[node name="Sprite2D" type="Sprite2D" parent="Game/Map"]
position = Vector2(1920, 1080)
texture = ExtResource("5_pfiwo")

[node name="MapTiles" type="Node" parent="Game/Map"]

[node name="EntityTiles" type="Node" parent="Game/Map"]

[node name="ItemTiles" type="Node" parent="Game/Map"]

[node name="Camera2D" type="Camera2D" parent="Game"]
zoom = Vector2(0.5, 0.5)
